# CPP_Labs

./: .gitignore  README.md
BitArray/: CMakeLists.txt
BitArray/src/: main.cpp
BitArray/src/BitArray/: BitArray.cpp  BitArray.h
BitArray/test/: Tests.cpp
SoundProcessor/: CMakeLists.txt  main.cpp  modeEnum.h  wawFileHeader.h
SoundProcessor/applyConverters/: applyConverters.cpp  applyConverters.h
SoundProcessor/createConverter/: createConverter.h
SoundProcessor/createConverter/createCensorship/: createCensorship.cpp  createCensorship.h
SoundProcessor/createConverter/createMix/: createMix.cpp  createMix.h
SoundProcessor/createConverter/createMute/: createMute.cpp  createMute.h
SoundProcessor/editor/: wawEditor.cpp  wawEditor.h
SoundProcessor/exceptions/failedOpenFile/: failedOpenFile.cpp  failedOpenFile.h
SoundProcessor/exceptions/wrongConfig/: wrongConfig.cpp  wrongConfig.h
SoundProcessor/exceptions/wrongConsoleParameters/: wrongConsoleParameters.cpp  wrongConsoleParameters.h
SoundProcessor/exceptions/wrongFileFormat/: wrongFileFormat.cpp  wrongFileFormat.h
SoundProcessor/iConverter/: IConverter.cpp  IConverter.h
SoundProcessor/iConverter/censorship/: censorship.cpp  censorship.h
SoundProcessor/iConverter/mix/: mix.cpp  mix.h
SoundProcessor/iConverter/mute/: mute.cpp  mute.h
SoundProcessor/parserInputWawFile/: parserInputWawFile.cpp  parserInputWawFile.h
SoundProcessor/returnerSamples/: returnerSamples.cpp  returnerSamples.h
SoundProcessor/writeOutFile/: writeOutFile.cpp  writeOutFile.h
TheLifeGame/: CMakeLists.txt
TheLifeGame/src/: main.cpp
TheLifeGame/src/Cell/: Cell.cpp  Cell.h
TheLifeGame/src/Controller/: Controller.cpp  Controller.h
TheLifeGame/src/Exceptions/: TheLifeGameExceptions.cpp  TheLifeGameExceptions.h
TheLifeGame/src/GameField/: GameField.cpp  GameField.h
TheLifeGame/src/TheLifeGameCreator/: TheLifeGameCreator.cpp  TheLifeGameCreator.h
TheLifeGame/src/Viewer/: Viewer.cpp  Viewer.h
